2006-12-13  Simon Goodall  <simon@simongoodall.co.uk>

	* Eris/View.cpp: Fix case where a look queue item could be discarded
	  during the send stage when the entity disappears without attempting to
	  perform another look. This could eventually lead to no more looks
	  being issued should the number of entities disappearing requiring
	  looks was too big.

2006-11-08  Al Riddoch  <alriddoch@zepler.org>

	* Eris/BaseConnection.cpp, Eris/BaseConnection.h,
	  Eris/Connection.cpp, Eris/MetaQuery.cpp, Eris/MetaQuery.h,
	  Eris/Metaserver.cpp: Re-order some includes which gave me some
	  trouble building the code on MacOS.

2006-08-16  Al Riddoch  <alriddoch@zepler.org>

	* autogen.sh, configure.ac: Add --enable/disable-debug option, so
	  asserts are built correctly for distribution.

	* configure.ac, Eris/Makefile.am, test/Makefile.am: Cut down compiler
	  commandline clutter a bit.

2006-08-07  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Room.cpp: Fix logic of assert test so Lobby now works correctly.

2006-06-26  Al Riddoch  <alriddoch@zepler.org>

	* Release 1.3.11, Interface version 12.

2006-06-25  James Turner  <james@worldforge.org>

	* test/clientConnection.cpp: ignore LOGOUT ops, so that tests work again

2006-06-25  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Connection.cpp: Initialise local variable to avoid
	  warning.

2006-06-25  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version for release soon, including
	  interface version. Remove notes about complex interface versions
	  required to handle supporting two versions of libsigc++.

2006-06-08  James Turner  <james@worldforge.org>

	* Eris/Account.cpp: make Account a to-router for it's own ID; this has not
	  been necessary up until now, since the response system handles almost all
	  operations recieved by Account.
	  
	* Eris/Account.cpp: correctly return HANDLED for sight(account) updates,
	  and trigger a character refresh if the characters attribute is modified
